--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tanish Is a Believer of Mahakal</title>
+    <title>Click shield </title>
   </head>
   <body style="background-color: lavender;">
     <div id="root"></div>
